[package]
name = "ay"
version = "0.1.0"
authors = ["Nikodem Rabuliński <nikodemrabulinski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Ay automatically implement Fn* traits for structs and enums"
keywords = ["macro", "unstable", "function", "metaprogramming", "meta"]
repository = "https://github.com/yuulive/ay/"
readme = "README.md"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"